new rotes and dependencies for the ui

--- a/ui/app/views/main.html
+++ b/ui/app/views/main.html
@@ -4,7 +4,7 @@
     <img src="images/spreadsheet.png" alt="spreadsheet" style="width:150px"><br>
     Welcome to semantic spreadsheets...
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Take me to the Table!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="#/table">Take me to the Table!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
