--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,9 +12,13 @@
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/handsontable/handsontable.full.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascript/jquery-3.1.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/requirejs/require.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/handsontable/handsontable.full.js")" type="text/javascript"></script>
     </head>
     <body>
         @* And here's where we render the `Html` object containing
@@ -22,3 +26,4 @@
         @content
     </body>
 </html>
+ً
