--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -14,7 +14,13 @@
     @*
      * Get an `Html` object by calling the built-in Play welcome
      * template and passing a `String` message.
+    *     @play20.welcome(message, style = "Scala")
      *@
-    @play20.welcome(message, style = "Scala")
 
+    <div class="page-header">
+        <h1>Progress bars</h1>
+    </div>
+    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60% Complete</span></div>
+    </div>
 }
