--- a/app/views/socket.scala.html
+++ b/app/views/socket.scala.html
@@ -1,7 +1,5 @@
 @(message: String)
 
-
-
 @main("Welcome to websocket!"){
     <div id="viewport">
         <canvas id="draws" width="500" height="300"></canvas>
@@ -9,5 +7,6 @@
     <div>
         <canvas id="controls" width="500" height=""></canvas>
     </div>
-    <script type="text/javascript" src="@routes.Assets.versioned("javascript/socket.js")"></script>
+    <div id="example"> </div>
+    <script src="@routes.Assets.versioned("javascripts/socket.js")" type="text/javascript"></script>
 }
