--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,18 +9,28 @@
  * argument is a `String` with the title of the page, the second
  * argument is an `Html` object containing the body of the page.
  *@
-@main("Welcome to Play") {
+@main("Welcome to PDstore") {
 
     @*
      * Get an `Html` object by calling the built-in Play welcome
      * template and passing a `String` message.
     *     @play20.welcome(message, style = "Scala")
      *@
+    <div style="margin: 10px">
+        <title>PDStore Test</title>
 
-    <div class="page-header">
-        <h1>Progress bars</h1>
+        <h2>PDStore Test</h2>
+
+        <textarea id="msg" type="text" name="message" style="width: 800px; padding: 10px; height: 500px; margin: 10px;
+            display: block; font-family:Sans-serif; font-size:1.2em;"></textarea>
+        <div style="margin: 10px;">
+            <input type="button" value="CONNECT" onclick="openWebSocket()">
+            <input type="submit" value="SEND" onclick="sendMessage()">
+            <input type="button" value="DISCONNECT" onclick="closeWebSocket()">
+            <input type="button" value="CLEAN" onclick="clean()">
+        </div>
+        <div id="output" style="max-height: 200px; margin: 10px;"></div>
     </div>
-    <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60% Complete</span></div>
-    </div>
+
+    <script src="@routes.Assets.versioned("javascripts/addTriple.js")" type="text/javascript"></script>
 }
