--- a/app/views/socket.scala.html
+++ b/app/views/socket.scala.html
@@ -9,4 +9,5 @@
     </div>
     <div id="example"> </div>
     <script src="@routes.Assets.versioned("javascripts/socket.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("lib/SlickGrid/lib/jquery-1.7.min.js")" type="text/javascript"></script>
 }
