--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,11 +13,17 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/handsontable/handsontable.full.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/handsontable/handsontable.full.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/SlickGrid/slick.grid.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/SlickGrid/examples/examples.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("lib/requirejs/require.js")" type="text/javascript"></script>
+        <!-- <script src="@routes.Assets.at("lib/requirejs/require.js")" type="text/javascript"></script> -->
         <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/SlickGrid/lib/jquery.event.drag-2.2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/SlickGrid/slick.core.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/SlickGrid/slick.grid.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/handsontable/handsontable.full.js")" type="text/javascript"></script>
     </head>
     <body>
