--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,17 +20,18 @@
         <title>PDStore Test</title>
 
         <h2>PDStore Test</h2>
-
-        <textarea id="msg" type="text" name="message" style="width: 800px; padding: 10px; height: 500px; margin: 10px;
+        <table></table>
+        <textarea id="msg" type="text" name="message" style="width: 10px; padding: 10px; height: 10px; margin: 10px;
             display: block; font-family:Sans-serif; font-size:1.2em;"></textarea>
         <div style="margin: 10px;">
-            <input type="button" value="CONNECT" onclick="openWebSocket()">
-            <input type="submit" value="SEND" onclick="sendMessage()">
-            <input type="button" value="DISCONNECT" onclick="closeWebSocket()">
-            <input type="button" value="CLEAN" onclick="clean()">
+            <button type="button" onclick="openWebSocket()">CONNECT</button>
+            <button type="submit" onclick="sendMessage()">SEND</button>
+            <button type="button" onclick="closeWebSocket()">DISCONNECT</button>
+            <button type="button" onclick="clean()">CLEAN</button>
         </div>
         <div id="output" style="max-height: 200px; margin: 10px;"></div>
     </div>
 
     <script src="@routes.Assets.versioned("javascripts/addTriple.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
 }
