--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,7 +21,7 @@
 
         <h2>PDStore Test</h2>
         <table></table>
-        <textarea id="msg" type="text" name="message" style="width: 10px; padding: 10px; height: 10px; margin: 10px;
+        <textarea id="msg" type="text" name="message" style="width: 600px; height: 600px; padding: 10px; margin: 10px;
             display: block; font-family:Sans-serif; font-size:1.2em;"></textarea>
         <div style="margin: 10px;">
             <button type="button" onclick="openWebSocket()">CONNECT</button>
