--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Clustered chat</title>
+        <title>Push</title>
         <meta charset="utf-8">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/tempid.css")">
         <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
@@ -19,12 +19,12 @@
             @flashMessages(flash)
             <div class="row">
                 <div class="col-sm-6 col-md-4 col-md-offset-4">
-                    <h1 class="text-center login-title">Clustered chat demo</h1>
+                    <h1 class="text-center login-title">Push Demo</h1>
                     <div class="account-wall">
                         <img class="profile-img" src='@routes.Assets.versioned("images/photo.png")' alt="">
                         <form action="@routes.CurrentEvent.tempid" class="form-signin" method="POST">
                             @elements.formErrors(tempForm)
-                            <input type="text" class="form-control" placeholder="nickname" required autofocus name=@tempForm("tempid").name>
+                            <input type="text" class="form-control" placeholder="Please Enter Your ID" required autofocus name=@tempForm("tempid").name>
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Enter</button>
                         </form>
                     </div>
