--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,32 +4,28 @@
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit request: play.api.mvc.RequestHeader)
 
 <!DOCTYPE html>
+
 <html lang="en">
     <head>
-        @* Here's where we render the page title `String`. *@
         <title>@title</title>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/handsontable/handsontable.full.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/SlickGrid/slick.grid.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/SlickGrid/examples/examples.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/SlickGrid/css/smoothness/jquery-ui-1.8.16.custom.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
-        <!-- <script src="@routes.Assets.at("lib/requirejs/require.js")" type="text/javascript"></script> -->
-        <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("lib/SlickGrid/lib/jquery.event.drag-2.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("lib/SlickGrid/slick.core.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("lib/SlickGrid/slick.grid.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("lib/handsontable/handsontable.full.js")" type="text/javascript"></script>
+        <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
+        <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.min.css"))'>
+        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/main.js")'></script>
+        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/event.js")'></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/lib/jquery.nicescroll.min.js")"></script>
+        <script type="text/javascript" src="@routes.WebJarAssets.at(WebJarAssets.locate("handlebars.min.js"))"></script>
+
     </head>
-    <body>
-        @* And here's where we render the `Html` object containing
-         * the page content. *@
+    <body data-ws-url="@routes.CurrentEvent.socket().webSocketURL()">
+        <div id="wrap">
         @content
+        </div>
     </body>
 </html>
-ً
