--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,7 @@
         <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
         <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.min.css"))'>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
+        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/main.js")'></script>
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/event.js")'></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/lib/jquery.nicescroll.min.js")"></script>
