--- a/app/views/grid.scala.html
+++ b/app/views/grid.scala.html
@@ -29,6 +29,6 @@
         </tr>
     </table>
 
-    <script src="@routes.Assets.versioned("javascripts/grid.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.versioned("../assets/javascripts/grid.js")" type="text/javascript"></script>
 
 }
