--- a/app/views/tabtest.scala.html
+++ b/app/views/tabtest.scala.html
@@ -11,7 +11,9 @@
 
         <div class="tab-content" style="margin-top: 10px">
             <div class="tab-pane fade in active">
-                <table></table>
+                <div id="table-area">
+                    <table></table>
+                </div>
             </div>
         </div>
         <!-- add modal (this has to move to a separate file so it can be used elsewhere without a neet to duplicate code! -->
