--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,6 +19,8 @@
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
         <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("lodash.min.js"))'></script>
+        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("moment.min.js"))'></script>
+        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/lib/combodate.js")'></script>
         <script type='text/javascript' src='@routes.Assets.versioned("javascripts/main.js")'></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/lib/jquery.nicescroll.min.js")"></script>
     </head>
