--- a/app/views/tabtest.scala.html
+++ b/app/views/tabtest.scala.html
@@ -8,7 +8,23 @@
         <ul class="nav nav-tabs">
             <li ><a href="#add" class="add-header" data-toggle="modal" data-target="#add-worksheet-modal"> + </a></li>
         </ul>
-
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                    <h4 class="panel-title">
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            History
+                        </a>
+                    </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in accordion" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="panel-body">
+                        <input type="text" id="datetime" data-format="DD-MM-YYYY HH:mm" data-template="DD / MM / YYYY     HH : mm" name="datetime" value="21-12-2012 20:30">
+                        <button type="button" class="btn btn-default btn-sm time-btn">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="tab-content" style="margin-top: 10px">
             <div class="tab-pane fade in active">
                 <div id="table-area">
