Further progress in temporal queries + a more efficient way for querying changes.

--- a/app/views/tabtest.scala.html
+++ b/app/views/tabtest.scala.html
@@ -19,8 +19,9 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in accordion" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
-                        <input type="text" id="datetime" data-format="DD-MM-YYYY HH:mm" data-template="DD / MM / YYYY     HH : mm" name="datetime" value="21-12-2012 20:30">
-                        <button type="button" class="btn btn-default btn-sm time-btn">Submit</button>
+                        <input type="text" id="datetime" data-format="DD-MM-YYYY HH:mm" data-template="DD / MM / YYYY     HH : mm" name="datetime">
+                        <button id="temporal-q" type="button" class="btn btn-default btn-sm time-btn">Previous Version</button>
+                        <button id="current-q" type="button" class="btn btn-default btn-sm time-btn" style="margin-right: 5px">Current Version</button>
                     </div>
                 </div>
             </div>
