--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,29 +4,22 @@
  * two arguments, a `String` for the title of the page and an `Html`
  * object to insert into the body of the page.
  *@
-@(title: String)(content: Html)(implicit request: play.api.mvc.RequestHeader)
+@(title: String)(content: Html)
 
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
+        @* Here's where we render the page title `String`. *@
         <title>@title</title>
-
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.min.css"))'>
-        <link rel='stylesheet' href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.min.css"))'>
-        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))'></script>
-        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))'></script>
-        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("lodash.min.js"))'></script>
-        <script type='text/javascript' src='@routes.WebJarAssets.at(WebJarAssets.locate("moment.min.js"))'></script>
-        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/lib/combodate.js")'></script>
-        <script type='text/javascript' src='@routes.Assets.versioned("javascripts/main.js")'></script>
-        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/lib/jquery.nicescroll.min.js")"></script>
+
     </head>
-    <body data-ws-url="@routes.CurrentEvent.socket().webSocketURL()">
-        <div id="wrap">
+    <body>
+        @* And here's where we render the `Html` object containing
+         * the page content. *@
         @content
-        </div>
+
+      <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
