--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,7 +13,7 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
     </head>
     <body>
         @* And here's where we render the `Html` object containing
@@ -21,5 +21,9 @@
         @content
 
       <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/lodash/lodash.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
     </body>
 </html>
