--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,19 @@
-@()
+@(tempForm: Form[String])(implicit request: play.api.mvc.RequestHeader)
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@main("Welcome to Semantic Spreadsheets") {
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <h1 class="text-center login-title">Welcome to Semantic Spreadsheets</h1>
+        <div class="account-wall">
+          <img class="profile-img" src='@routes.Assets.versioned("images/photo.png")' alt="">
+          <form action="@routes.SpreadsheetController.userid" class="form-signin" method="POST">
+            <input type="text" class="form-control" placeholder="User Name" required autofocus name=@tempForm("userid").name>
+            <input type="password" class="form-control" placeholder="Password" required autofocus>
+            <button class="btn btn-lg btn-primary btn-block btn-login" type="submit">Login</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 }
