--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -24,9 +24,17 @@
                 }
             </div>
         </div>
+        <div class="row" style="margin-top: 10px">
+            <class class="col-sm-12">
+                <button id="create-table" type="button" class="btn btn-primary">Create Table</button>
+                <button id="query-table" type="button" class="btn btn-primary">Query Table</button>
+                <button id="create-change" type="button" class="btn btn-primary">Create Chage</button>
+                <button id="query-change" type="button" class="btn btn-primary">Query Change</button>
+            </class>
+        </div>
             <!-- add modal (this has to move to a separate file so it can be used elsewhere without a neet to duplicate code! -->
         <div class="modal fade" id="add-worksheet-modal" tabindex="-1" role="dialog" aria-labelledby="worksheet-lable">
-            <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-dialog modal-md" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -35,18 +43,28 @@
                     <div class="modal-body">
                         <form>
                             <div class="form-group">
-                                <label for="worksheet-lable" class="control-label">Worksheet Lable:</label>
+                                <label for="worksheet-lable" class="control-label">Enter New Table Name:</label>
                                 <textarea class="form-control" rows="1" id="worksheet-lable"></textarea>
+                                <h3>Or</h3>
+                                <label for="new-table-lable" class="control-lable">Select an Existing Table:</label><br>
+                                <select id="table-picker" class="selectpicker" multiple data-live-search="true">
+                                </select>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" id="add-worksheet">Create Worksheet</button>
+                        <button type="button" class="btn btn-primary" id="create-table">Create Table</button>
+                        <button type="button" class="btn btn-default" id="load-table">Load Table</button>
                     </div>
                 </div>
             </div>
         </div>
         <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/sampleJson.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
     </div>
 }
