--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,10 +15,12 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/spreadsheet.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("cssLib/bootstrap-select.css")">
         <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/lodash/lodash.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("jsLib/bootstrap-select.js")" type="text/javascript"></script>
     </head>
     <body data-ws-url="@routes.SpreadsheetController.socketSpreadsheet().webSocketURL()">
         <div class="wrap">
