--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -65,5 +65,6 @@
         <script src="@routes.Assets.versioned("javascripts/sampleJson.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/adaptor.js")" type="text/javascript"></script>
     </div>
 }
