--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -15,6 +15,7 @@
             <div class="col-sm-11">
                 <button id="connect-ws" type="button" class="btn btn-primary">Connect</button>
                 <button id="disconnect-ws" type="button" class="btn btn-danger">Disconnect</button>
+                <button id="table-triples" type="button" class="btn btn-primary">Triples</button>
             </div>
             <div class="col-sm-1">
                 <a class="button-form-link" href="#">
