parsing and loading csv files into pdstore (incomplete).

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,6 +20,7 @@
         <script src="@routes.Assets.at("lib/lodash/lodash.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/papaparse/papaparse.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("jsLib/bootstrap-select.js")" type="text/javascript"></script>
     </head>
     <body data-ws-url="@routes.SpreadsheetController.socketSpreadsheet().webSocketURL()">
