on CSV import check if any of the triples already exists in the store, if yes, warns user and asks them to resolve the conflicts before saving.

--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -9,6 +9,7 @@
                 </div>
             </div>
             <button class="btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 10px">Load CSV</button>
+            <button class="btn btn-info" id="check-csv-triples" style="margin-top: 10px">Check CSV</button>
         </div>
         <!-- Modal -->
         <div class="modal fade" id="load-file" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
