some styling to make the app more appealing

--- a/app/views/csvModal.scala.html
+++ b/app/views/csvModal.scala.html
@@ -9,16 +9,16 @@
             </div>
             <div class="modal-body">
                         Select a file to load:<br>
-                <label for="csv-file" class="btn btn-primary" style="margin: 5px 0px">
+                <label for="csv-file" class="btn3d btn btn-primary" style="margin: 10px 0px">
                                 Select CSV File
                 </label>
                 <input type="file" id="csv-file" style="display: none"/>
                 <p id="file-name"></p>
                 <p id="file-size-warning" style="color: red"></p>
                     </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button id="load-file-button" type="button" class="btn btn-primary" data-dismiss="modal">Load File</button>
+                <div class="modal-footer">
+                <button type="button" class="btn3d btn btn-danger" data-dismiss="modal">Close</button>
+                <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal" style="margin-top: 0px">Load File</button>
             </div>
         </div>
     </div>
