--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -1,18 +1,16 @@
 @(user: String, tableName: String)(implicit request: play.api.mvc.RequestHeader)
 @main("spreadsheet!"){
-    <div class="container">
-        <div class="tab-content" style="margin-top: 10px">
-            <div class="tab-pane fade in active">
-                <div id="table-area">
-                    <div id="@tableName">Table Name: @tableName</div>
-                    <table></table>
-                </div>
-            </div>
-            <button class="btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 10px">Load CSV</button>
-            <button class="btn btn-info" id="check-csv-triples" style="margin-top: 10px">Check CSV</button>
-        </div>
-        @csvModal()
+    <div class="container" style="margin-top: 10px">
+        @navbar(user, tableName)
     </div>
+    <div class="container">
+        <div id="table-area" class="card">
+            <table></table>
+        </div>
+        <button class="btn3d btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 15px">Load CSV</button>
+        <button class="btn3d btn btn-info" id="check-csv-triples" style="margin-top: 15px">Check CSV</button>
+    </div>
+    @csvModal()
     <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
