--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,10 +13,13 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/login.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/jquery-ui/jquery-ui.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/spreadsheet.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("cssLib/bootstrap-select.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/w3.css")">
         <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/jquery-ui/jquery-ui.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/lodash/lodash.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
