--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -1,7 +1,7 @@
 @(tableName: String, UserName: String)
 
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding-left: 0px">
             <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <img src='@routes.Assets.versioned("images/favicon.png")' width="40" height="40" style="margin: 5px" alt="">
         </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
