--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -1,44 +1,16 @@
 @(user: String)(implicit request: play.api.mvc.RequestHeader)
 @main("spreadsheet!"){
-    @navbar("", user)
+    @partials.navbar("All Tables", user)
     <div class="container default">
-        <!--
-        <ul class="nav nav-tabs" id="current-tabs">
-            <li ><a href="#add" class="add-table" data-toggle="modal" data-target="#add-table-modal"> + </a></li>
-        </ul>
-        <div class="tab-content" style="margin-top: 10px">
-            <div class="tab-pane fade in active">
-                <div id="table-area">
-                    <table></table>
-                </div>
-            </div>
-        </div>
-        -->
-        <!--
-        <div class="row">
-            <div class="col-sm-3" height="100">
-                <div class="w3-card-4 w3-dark-grey">
-                    <div class="w3-container w3-center">
-                        <h3>Friend request</h3>
-                        <img src='@routes.Assets.versioned("images/photo.png")' alt="Avatar" style="width:80%">
-                        <h5>John Doe</h5>
-
-                        <button class="w3-button w3-green">Accept</button>
-                        <button class="w3-button w3-red">Decline</button>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        -->
-        <div class="row">
-            @tableSelect()
+        <div class="row" >
+            <div id="table-select" style="height: 52em; overflow: auto"></div>
         </div>
         <div class="row" style="margin-top: 10px">
             <div class="col-sm-11">
-                <button id="connect-ws" type="button" class="btn btn-primary">Connect</button>
+                <button id="new-table" class="btn3d btn btn-primary">New Table</button>
+                @*<button id="connect-ws" type="button" class="btn btn-primary">Connect</button>
                 <button id="disconnect-ws" type="button" class="btn btn-danger">Disconnect</button>
-                <button id="table-triples" type="button" class="btn btn-primary">Triples</button>
+                <button id="table-triples" type="button" class="btn btn-primary">Triples</button>*@
             </div>
             <div class="col-sm-1">
                 <a class="button-form-link" href="#">
@@ -48,46 +20,13 @@
                 }
             </div>
         </div>
-        <div class="row" style="margin-top: 10px">
-            <class class="col-sm-12">
-                <button id="add-preds" type="button" class="btn btn-primary">Add Preds</button>
-                <button id="add-subs" type="button" class="btn btn-primary">Add Subs</button>
-                <button id="query-change" type="button" class="btn btn-primary">Query Change</button>
-            </class>
-        </div>
-            <!-- add modal (this has to move to a separate file so it can be used elsewhere without a neet to duplicate code! -->
-        <div class="modal fade" id="add-table-modal" tabindex="-1" role="dialog" aria-labelledby="worksheet-lable">
-            <div class="modal-dialog modal-md" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="worksheet-lable">New Table</h4>
-                    </div>
-                    <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="worksheet-lable" class="control-label">Enter New Table Name:</label>
-                                <textarea class="form-control" rows="1" id="table-name"></textarea>
-                                <h3>Or</h3>
-                                <label for="new-table-lable" class="control-lable">Select an Existing Table:</label><br>
-                                <select id="table-picker" class="selectpicker" multiple data-live-search="true">
-                                </select>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" id="create-table">Create Table</button>
-                        <button type="button" class="btn btn-default" id="load-table">Load Table</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @partials.newTableModal()
         <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/sampleJson.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/alert.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/websocket.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/dynamicTemplates/tableSelect.js")" type="text/javascript"></script>
     </div>
 }
