WIP: CSV import conflict resolution.

--- a/app/views/partials/conflictModal.scala.html
+++ b/app/views/partials/conflictModal.scala.html
@@ -12,7 +12,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn3d btn btn-danger" data-dismiss="modal">Close</button>
-                <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal" style="margin-top: 0px">Load File</button>
+                <button id="apply-csv-conflict" type="button" class="btn3d btn btn-primary" data-dismiss="modal" style="margin-top: 0px">Apply Changes</button>
             </div>
         </div>
     </div>
