--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -2,7 +2,7 @@
 @main("spreadsheet!"){
     @partials.navbar(tableName, user)
     <div class="container">
-        <div id="table-area" class="card table-card">
+        <div id="table-area" class="table-card">
             <table></table>
         </div>
         <button class="btn3d btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 15px">Load CSV</button>
