handling null values in conflict resolution

--- a/app/views/partials/conflictModal.scala.html
+++ b/app/views/partials/conflictModal.scala.html
@@ -9,6 +9,7 @@
             </div>
             <div class="modal-body">
                 <div id="res-placeholder"></div>
+                <p id="missing-value-warning" style="color: red"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn3d btn btn-danger" data-dismiss="modal">Close</button>
