importing csv fully implemented. conflict resolution still buggy.

--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -7,6 +7,7 @@
         </div>
         <button class="btn3d btn btn-primary" data-toggle="modal" data-target="#load-file" style="margin-top: 15px">Load CSV</button>
         <button class="btn3d btn btn-danger" data-toggle="modal" data-target="#resolve-conflicts" style="margin-top: 15px">Resolve Conflicts</button>
+        <button class="btn3d btn btn-success" id="save-csv-table" style="margin-top: 15px">Save</button>
     </div>
     @partials.csvModal()
     @partials.conflictModal()
