csv import now is being handled using navbar with proper error handling if the table is not empty.

--- a/app/views/partials/warningModal.scala.html
+++ b/app/views/partials/warningModal.scala.html
@@ -10,9 +10,10 @@
             <div class="modal-body">
                 <h5 style="color: red; padding-bottom: 10px; margin: 10px">something something something something something something something something something!</h5>
                 <h5></h5>
-            <div class="modal-footer">
-                <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal">Go Back</button>
-                <button type="button" class="btn3d btn btn-danger" data-dismiss="modal" style="margin-top: 0px">Proceed</button>
+                <div class="modal-footer">
+                    <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal">Go Back</button>
+                    <button type="button" class="btn3d btn btn-danger" data-dismiss="modal" style="margin-top: 0px">Proceed</button>
+                </div>
             </div>
         </div>
     </div>
