--- a/app/views/partials/csvModal.scala.html
+++ b/app/views/partials/csvModal.scala.html
@@ -18,7 +18,7 @@
                     </div>
                 <div class="modal-footer">
                 <button type="button" class="btn3d btn btn-danger" data-dismiss="modal">Close</button>
-                <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal" style="margin-top: 0px">Load File</button>
+                <button id="load-file-button" type="button" class="btn3d btn btn-primary" data-dismiss="modal" style="margin-top: 0px">Load CSV</button>
             </div>
         </div>
     </div>
