--- a/app/views/partials/navbar.scala.html
+++ b/app/views/partials/navbar.scala.html
@@ -17,7 +17,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Import CSV</a></li>
+                        <li><a href="#" id="navbar-csv-import">Import CSV</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Export CSV</a></li>
                         <li role="separator" class="divider"></li>
