added export table to dropdown menu. created a new table button.

--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -7,8 +7,8 @@
         </div>
         <div class="row" style="margin-top: 10px">
             <div class="col-sm-11">
-                <button id="new-table" class="btn3d btn btn-primary">New Table</button>
-                @*<button id="connect-ws" type="button" class="btn btn-primary">Connect</button>
+                @*<button id="new-table" class="btn3d btn btn-primary">New Table</button>
+                <button id="connect-ws" type="button" class="btn btn-primary">Connect</button>
                 <button id="disconnect-ws" type="button" class="btn btn-danger">Disconnect</button>
                 <button id="table-triples" type="button" class="btn btn-primary">Triples</button>*@
             </div>
