CSV exportation of individual tables fully functional.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -24,6 +24,7 @@
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/papaparse/papaparse.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/filesaver/filesaver.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("jsLib/bootstrap-select.js")" type="text/javascript"></script>
     </head>
     <body data-ws-url="@routes.SpreadsheetController.socketSpreadsheet().webSocketURL()">
