--- a/app/views/partials/navbar.scala.html
+++ b/app/views/partials/navbar.scala.html
@@ -19,7 +19,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="#" id="navbar-csv-import">Import CSV</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Export CSV</a></li>
+                        <li><a href="#" id="navbar-csv-export">Export CSV</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Resolve Conflicts</a></li>
                         <li role="separator" class="divider"></li>
