turning boostrap-select from an unmanaged dependency to a managed dependency.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/jquery-ui/jquery-ui.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("lib/bootstrap/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/spreadsheet.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("cssLib/bootstrap-select.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-select/dist/css/bootstrap-select.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/w3.css")">
         <script src="@routes.Assets.at("lib/jquery/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/jquery-ui/jquery-ui.js")" type="text/javascript"></script>
@@ -24,7 +24,7 @@
         <script src="@routes.Assets.at("lib/bootstrap/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/momentjs/moment.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("lib/papaparse/papaparse.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("jsLib/bootstrap-select.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("lib/bootstrap-select/dist/js/bootstrap-select.js")" type="text/javascript"></script>
     </head>
     <body data-ws-url="@routes.SpreadsheetController.socketSpreadsheet().webSocketURL()">
         <div class="wrap">
