fully functional modal for multiple csv export.

--- a/app/views/spid.scala.html
+++ b/app/views/spid.scala.html
@@ -12,6 +12,7 @@
     @partials.conflictModal()
     @partials.warningModal()
     @partials.errorModal()
+    @partials.exportTableModal()
     <script src="@routes.Assets.versioned("javascripts/dynamicTemplates/conflictRes.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
