--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -22,6 +22,7 @@
         </div>
         @partials.newTableModal()
         @partials.warningModal()
+        @partials.exportTableModal()
         <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
