--- a/app/views/spreadsheet.scala.html
+++ b/app/views/spreadsheet.scala.html
@@ -23,6 +23,7 @@
         @partials.newTableModal()
         @partials.warningModal()
         @partials.exportTableModal()
+        @partials.csvModal()
         <script src="@routes.Assets.versioned("javascripts/spreadsheet.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/table.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/document.js")" type="text/javascript"></script>
